fixed spacing on portfolio

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -142,9 +142,8 @@
     padding-bottom: 30px;
 }
 .skate{
-    float: left;
+    float: right;
     margin: 30px;
-    transform: translate(-50%);
 }
 .car{
     float: left;
